fixed spacing with teams button and logo

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,7 +50,7 @@ nav .brand-logo .logo-dex {
 }
 
 nav .teams-button {
-  margin-left: 15px;
+  margin-left: 35px;
 }
 
 nav .sign-out {
