--- a/client/src/styles/Navbar.scss
+++ b/client/src/styles/Navbar.scss
@@ -26,7 +26,7 @@ nav {
   }
 
   .teams-button {
-    margin-left: 15px;
+    margin-left: 35px;
   }
 
   .sign-out {
